increase animation speed to avoid weird behaviour when animations overlap

--- a/scoreboard.scss
+++ b/scoreboard.scss
@@ -132,7 +132,7 @@ input, button {
 
 			.letter-old, .letter-new {
 				display: inline-block;
-				transition: transform .4s;
+				transition: transform .2s;
 			}
 			.letter-old {
 				width: 0;
